test_regress/t/t_sequence_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:34:7: Unsupported: within (in sequence expression)
   34 |     a within(b);
      |       ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:98:7: Unsupported: [= range nonconsecutive repetition
   98 |     a [= 1:2];
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:101:7: Unsupported: [= range nonconsecutive repetition
  101 |     a [= 1:$];
      |       ^~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:107:7: Unsupported: [-> range goto repetition
  107 |     a [-> 1:2];
      |       ^~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:110:26: Unsupported: sequence argument data type
  110 |   sequence p_arg_seqence(sequence inseq);
      |                          ^~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:118:5: Unsupported: first_match with sequence_match_items
  118 |     first_match (a, res0 = 1);
      |     ^~~~~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:121:5: Unsupported: first_match with sequence_match_items
  121 |     first_match (a, res0 = 1, res1 = 2);
      |     ^~~~~~~~~~~
%Error: Exiting due to
